tests/missing-instance.stderr
error: 
   ┌─ test:2:1
   │
 2 │ show Foo
   │ ^^^^ cannot display `Foo` on the screen
   │
   ┌─ <dir>/std/io.wpl:25:17
   │
25 │ show :: A where (Show A) => A -> ()
   │                 -------- required by this bound here
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/missing-instance

